--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
          </div>
       </div>
 
-      <div class="news-hot py-4">
+      <div class="news-hot py-5 mb-4">
          <div class="container">
             <div class="logo pb-4 d-flex justify-content-between">
                <div class="d-flex align-items-end">
@@ -121,33 +121,135 @@
          </div>
       </div>
 
-      <div class="">
-         <div class="container">
-            <h1>truyền hình số vệ tinh mai làm</h1>
+      <div class="dth py-4">
+         <div class="bg"></div>
+         <div class="container content">
+            <div class="row align-items-center">
+               <div class="col-sm-8 col-md-9">
+                  <div class="item-1">
+                     <h3>Truyền hình số vệ tinh DTH</h3>
+                     <p>Gói kênh DTH mang đến cho khán giả sự lựa chọn hấp dẫn với mức phí thuê bao chỉ từ 30.000 -
+                        60.000đ/tháng. Gói Cao cấp có tới 154 kênh (77 kênh HD) và gói Cơ bản có 132 kênh (61 kênh HD)
+                        bao gồm nhiều nhóm kênh hấp dẫn, đáp ứng nhu cầu xem truyền hình của mọi khách hàng…</p>
+                     <h2>
+                        <span>30 - 60.000đ</span><span>/tháng</span>
+                        <span>154</span><span>kênh</span>
+                     </h2>
+                     <a href="#">Xem thêm</a>
+                  </div>
+               </div>
+               <div class="pt-3 py-md-0 col-sm-4 col-md-3">
+                  <div class="item-2">
+                     <img src="./img/DTHDTT4-02-2048x1633.jpg" alt="..." class="img-fluid">
+                  </div>
+               </div>
+            </div>
          </div>
       </div>
 
-      <div class="">
-         <div class="container">
-            <h1>truyền hình số mặt đất</h1>
+      <div class="dtt py-4 my-5">
+         <div class="bg"></div>
+         <div class="container content">
+            <div class="row">
+               <div class="pb-3 py-md-0 col-sm-4 col-md-3">
+                  <div class="item-1">
+                     <img src="./img/DTHDTT4-01-1024x807.jpg" alt="..." class="img-fluid">
+                  </div>
+               </div>
+               <div class="col-sm-8 col-md-9">
+                  <div class="item-2">
+                     <h3>Truyền hình số mặt đất DTT</h3>
+                     <p>Gói Cao cấp của Truyền hình số vệ tinh DTT mang đến 119 kênh (52 kênh HD), gói Cơ bản cung cấp
+                        94 kênh (34 kênh HD). Khi đăng ký Truyền hình số Mặt đất DTT, Quý khán giả sẽ được thưởng thức
+                        hệ thống kênh đặc sắc, phong phú về thể loại với chi phí vô cùng tiết kiệm…</p>
+                     <h2>
+                        <span>30 - 60.000đ</span><span>/tháng</span>
+                        <spans>119</spans><span>kênh</span>
+                     </h2>
+                     <a href="#">Xem thêm</a>
+                  </div>
+               </div>
+            </div>
          </div>
       </div>
 
-      <div class="">
+      <div class="support pt-3 pb-5">
          <div class="container">
-            <h1>Hỗ trợ khách hàng</h1>
+            <div class="row">
+               <div class="col-md-7">
+                  <div class="item-1">
+                     <h3>Hãy để<img src="./img/logo3.png" alt="..."></h3>
+                     <p>Hỗ trợ bạn</p>
+                     <p>Ngay hôm nay !</p>
+                  </div>
+               </div>
+               <div class="py-3 pt-md-0 col-md-5">
+                  <div class="item-2">
+                     <h3>Hỗ trợ gọi khách hàng</h3>
+                     <a href="tel:19001900" class="phone">
+                        <i class="bi bi-telephone-forward"></i>
+                        <div>
+                           <p>19001900</p>
+                           <p>Giờ làm việc 7h-22h</p>
+                        </div>
+                     </a>
+                     <a href="#" class="location">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        <p>Đại lý gần nhất</p>
+                     </a>
+                     <h3>Bạn muốn tìm hiểu</h3>
+                     <div class="question">
+                        <div class="content">
+
+                           <button type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample">
+                              <span>Về sản phẩm</span>
+                              <i class="bi bi-chevron-down"></i>
+                           </button>
+
+                           <div class="mt-2 collapse" id="collapseExample">
+                              <a href="#">Về dịch vụ và khuyến mãi</a> <br>
+                              <a href="#">Về giải quyết khiếu nại</a><br>
+                              <a href="#">Về hướng dẫn khắc phục sự cố</a><br>
+                              <a href="#">Về nâng cấp phần mềm</a>
+                           </div>
+                        </div>
+
+                     </div>
+                  </div>
+               </div>
+            </div>
          </div>
       </div>
 
-      <div class="">
+      <div class="vschonavg">
          <div class="container">
-            <h1>vì sao chọn avg</h1>
+            <div class="row">
+               <div class="col-md-4">
+                  <div class="item-1">
+                     <h3>Giá cước rẻ<i class="bi bi-currency-dollar"></i></h3>
+                     <h3>Dễ dàng lắp đặt<i class="bi bi-clock-history"></i></h3>
+                  </div>
+               </div>
+               <div class="col-md-4 position-relative">
+                  <div class="item-2">
+                     <h3>Vì sao chọn</h3>
+                     <h3>Truyền hình avg?</h3>
+                  </div>
+               </div>
+               <div class="col-md-4">
+                  <div class="item-3">
+                     <h3><span>150+</span>Kênh truyền hình</h3>
+                     <h3><span>63</span>Tỉnh thành</h3>
+                  </div>
+               </div>
+            </div>
+            <div></div>
          </div>
       </div>
 
-      <div class="slide">
+      <div class="slide pt-5">
          <div class="container" style="cursor: grab;">
-            <div class="owl-carousel owl-theme d-flex align-items-center">               
+            <div class="owl-carousel owl-theme d-flex align-items-center">
             </div>
          </div>
       </div>
@@ -178,8 +280,8 @@
                   <div class="icon pt-1 pb-3">
                      <a href="#" title="Follow on facebook"><i class="bi bi-facebook"></i></a>
                      <a href="#" title="Send us an mail"><i class="bi bi-envelope-fill"></i></a>
-                     <a href="#" title="Follow on Youtube"><i class="bi bi-youtube"></i></a>    
-                     <a href="#"><img src="./img/Footer/zalo-1-300x300.png" alt="..."></a>                            
+                     <a href="#" title="Follow on Youtube"><i class="bi bi-youtube"></i></a>
+                     <a href="#"><img src="./img/Footer/zalo-1-300x300.png" alt="..."></a>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-4">
@@ -248,9 +350,25 @@
 
 
    <script src="./libs/jquery/jquery-3.6.4.min.js"></script>
+   <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> -->
    <script src="./libs/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
    <script src="./libs/OwlCarousel2-2.3.4/dist/owl.carousel.min.js"></script>
    <script src="./js/main.js"></script>
+   <script>
+      var btn = document.querySelector("#main .support .item-2 .question button")
+      var icon = document.querySelector("#main .support .item-2 .question button i")
+      btn.onclick = function () {
+         if (!btn.classList.contains("collapsed")) {
+            btn.style.color = "#f95702";
+            btn.style.fontWeight = "700";
+            icon.style.transform = "rotate(-180deg)"
+         } else {
+            btn.style.color = "inherit";
+            btn.style.fontWeight = "inherit";
+            icon.style.transform = "inherit"
+         }
+      }
+   </script>
 </body>
 
 </html>
